enum PIN SimpleButton JoyStick some method-renamings Logging uses standard java logging